css/style.css
body {
    font: 400 15px Raleway, sans-serif;
    line-height: 1.8;
    color: #818181;
  }
  h2 {
    font-size: 24px;
    text-transform: uppercase;
    color: #303030;
    font-weight: 600;
    margin-bottom: 30px;
  }
  h4 {
    font-size: 19px;
    line-height: 1.375em;
    color: #303030;
    font-weight: 400;
    margin-bottom: 30px;
  }  
  .jumbotron {
    /* background-image: url(flowers3.jpg); */
    color: #fff;
    padding: 200px 25px;
    font-family: Montserrat, sans-serif;
  }

.parallax {
    background-image: url(flowers3.jpg);
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

  .container-fluid {
    padding: 60px 50px;
  }
  .bg-grey {
    background-color: #f6f6f6;
  }

.choc {
    padding-bottom: 20px;
}

#pro {
    width: 250px;
    height: 250px;
}

.skil {
    width: 50px;
    height: 60px;
}


.skil2 {
    width: 60px;
    height: 60px;
}


#skil {
    padding: 10px;
}

#pro {
    min-width: 250px;
}

#choc {
    max-width: 100%;
}

.fa {
    padding: 20px;
    font-size: 40px;
    width: 80px;
    text-align: center;
    text-decoration: none !important;
    border-radius: 50%;
}

.fa:hover {
    opacity: 0.8;
}

.fa-linkedin {
    background: #007bb5;
    color: white;
}

.fa-github {
    background: black;
    color: white;
}

.email {
    color: #326772;
}

.navbar {
    margin-bottom: 0;
    background-color: #326772;
    z-index: 9999;
    border: 0;
    font-size: 12px !important;
    line-height: 1.42857143 !important;
    letter-spacing: 4px;
    border-radius: 0;
    font-family: Montserrat, sans-serif;
  }
  .navbar li a, .navbar .navbar-brand {
    color: #fff !important;
  }
  .navbar-nav li a:hover, .navbar-nav li.active a {
    color: #326772 !important;
    background-color: #fff !important;
  }
  .navbar-default .navbar-toggle {
    border-color: transparent;
    color: #fff !important;
  }
  footer .glyphicon {
    font-size: 20px;
    margin-bottom: 20px;
    color: #326772;
  }
  .slideanim {visibility:hidden;}
  .slide {
    animation-name: slide;
    -webkit-animation-name: slide;
    animation-duration: 1s;
    -webkit-animation-duration: 1s;
    visibility: visible;
  }
  @keyframes slide {
    0% {
      opacity: 0;
      transform: translateY(70%);
    } 
    100% {
      opacity: 1;
      transform: translateY(0%);
    }
  }
  @-webkit-keyframes slide {
    0% {
      opacity: 0;
      -webkit-transform: translateY(70%);
    } 
    100% {
      opacity: 1;
      -webkit-transform: translateY(0%);
    }
  }
  @media screen and (max-width: 768px) {
    .col-sm-4 {
      text-align: center;
      margin: 25px 0;
    }
    .btn-lg {
      width: 100%;
      margin-bottom: 35px;
    }
  }
  @media screen and (max-width: 480px) {
    .logo {
      font-size: 150px;
    }
  }


/* CSS from https://codepen.io/maheshambure21/pen/GgVbVW */
figure {
    position: relative;
    overflow: hidden;
    min-width: 300px;
    max-width: 500px;
    max-height: 500px;;
    width: 100%;
    background: white;
    text-align: center;
    cursor: pointer;
}

figure img {
    position: relative;
    min-height: 100%;
    max-width: 100%;
    opacity: 0.8;
}

figure figcaption {
    padding: 2em;
    color: #fff;
    font-family: 'Raleway';
    text-transform: none !important;
    font-size: 1.25em;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}

figure figcaption::before,
figure figcaption::after {
    pointer-events: none;
}

figure figcaption,
figure figcaption > a {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

figure figcaption > a {
    z-index: 1000;
    text-indent: 200%;
    white-space: nowrap;
    font-size: 0;
    opacity: 0;
}

figure h2 {
    word-spacing: -0.15em;
    font-weight: 300;
    color: white;
}

figure h2 span {
    font-weight: 300;
}

 figure h2,
 figure p {
    margin: 0;
}

figure p {
    letter-spacing: 0px;
    font-size: 80%;
}


figure.effect-sarah {
    background: #818181;
}

figure.effect-sarah img {
    max-width: none;
    width: -webkit-calc(100% + 20px);
    width: calc(100% + 20px);
    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
    transition: opacity 0.35s, transform 0.35s;
    -webkit-transform: translate3d(-10px,0,0);
    transform: translate3d(-10px,0,0);
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}

figure.effect-sarah:hover img {
    opacity: 0.4;
    -webkit-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
}

figure.effect-sarah figcaption {
    text-align: left;
}

figure.effect-sarah h2 {
    position: relative;
    overflow: hidden;
    padding: 0.5em 0;
}

figure.effect-sarah h2::after {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 3px;
    background: #fff;
    content: '';
    -webkit-transition: -webkit-transform 0.35s;
    transition: transform 0.35s;
    -webkit-transform: translate3d(-100%,0,0);
    transform: translate3d(-100%,0,0);
}

figure.effect-sarah:hover h2::after {
    -webkit-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
}

figure.effect-sarah p {
    padding: 1em 0;
    opacity: 0;
    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
    transition: opacity 0.35s, transform 0.35s;
    -webkit-transform: translate3d(100%,0,0);
    transform: translate3d(100%,0,0);
}

figure.effect-sarah:hover p {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
}


/*Controls the text and how it stays in the box */

@media screen and (max-width: 50em) {
    .grid figure {
        display: inline-block;
        float: none;
        margin: 10px 15px 100px;
        width: 100%;
        max-width: 300px;
    }
}

/* End of CSS effect */

